# RustOS

./: .gitignore  AUDIT_REPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TROUBLESHOOTING.md
.cargo/: config.toml
.github/workflows/: build.yml
docs/: ARCHITECTURE.md
src/: main.rs  vga_buffer.rs
